<resources>
    <string name="app_name">MessingAround</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="random_text">More random text???</string>
    <string name="goodbye_android_text">Goodbye you crazy Android app!!!</string>
    <string name="first_button_text">1st Button</string>
    <string name="second_button_text">2nd Button</string>
    <string name="third_button_text">3rd Button</string>
    <string name="answer_yes_button">Yes</string>
    <string name="answer_no_button">No</string>
    <string name="person_name_hint">Enter your name</string>
</resources>
