<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goodbye_android_text"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_text"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_button_text"
            android:textSize="15sp"
            android:hint="I'm good!"
            android:onClick="onFirstButtonClicked"
            android:id="@+id/first_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_button_text"
            android:textSize="15sp"
            android:hint="I'm better!"
            android:onClick="onSecondButtonClicked"
            android:id="@+id/second_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_button_text"
            android:textSize="15sp"
            android:hint="I'm the best!"
            android:onClick="onThirdButtonClicked"
            android:id="@+id/third_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:background="@color/primary_dark_material_light"
            android:textColor="@color/primary_material_light"
            android:text="Placeholder Text"
            android:id="@+id/click_textview"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="Are You Happy?"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_yes_button"
                android:textSize="15sp"
                android:hint="Yes!"
                android:onClick="onYesButtonClicked"
                android:id="@+id/yes_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_no_button"
                android:textSize="15sp"
                android:hint="No!"
                android:onClick="onNoButtonClicked"
                android:id="@+id/no_button"/>

        </LinearLayout>

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/person_name_hint"
            android:id="@+id/name_edit_text"/>

    </LinearLayout>

</LinearLayout>
